--- a/index.html
+++ b/index.html
@@ -11,31 +11,35 @@
         <div class="input-group-prepend">
             <span class="input-group-text">Total Emeralds</span>
         </div>
-        <input class="form-control" type="number" id="e" value="0" onkeyup="spread()"/>
+        <input class="form-control" type="number" id="e" placeholder="0" onkeyup="spread()"/>
+        <div class="input-group-append">
+            <button class="btn btn-success" onclick="tax()">add tax</button>
+            <button class="btn btn-warning" onclick="detax()">deduct tax</button>
+        </div>
     </div>
     <div class="input-group mb-3">
         <div class="input-group-prepend">
             <span class="input-group-text">Stacks</span>
         </div>
-        <input class="form-control" type="number" id="stx" value="0" onkeyup="merge()"/>
+        <input class="form-control" type="number" id="stx" placeholder="0" onkeyup="merge()"/>
     </div>
     <div class="input-group mb-3">
         <div class="input-group-prepend">
             <span class="input-group-text">LE</span>
         </div>
-        <input class="form-control" type="number" id="le" value="0" onkeyup="merge()"/>
+        <input class="form-control" type="number" id="le" placeholder="0" onkeyup="merge()"/>
     </div>
     <div class="input-group mb-3">
         <div class="input-group-prepend">
             <span class="input-group-text">EB</span>
         </div>
-        <input class="form-control" type="number" id="eb" value="0" onkeyup="merge()"/>
+        <input class="form-control" type="number" id="eb" placeholder="0" onkeyup="merge()"/>
     </div>
     <div class="input-group mb-3">
         <div class="input-group-prepend">
             <span class="input-group-text">Emeralds</span>
         </div>
-        <input class="form-control" type="number" id="c" value="0" onkeyup="merge()"/>
+        <input class="form-control" type="number" id="c" placeholder="0" onkeyup="merge()"/>
     </div>
 
 
